[build-system]
requires = "setuptools>=61.0"
build-backend = "setuptools.build_meta"

[project]
name = "network-stresser"
version = "1.0.0"
description = "Professional-grade network load testing and stress testing tool"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Network Stresser", email = "dev@example.com"}
]
keywords = ["load-testing", "stress-testing", "network", "performance", "http", "ddos"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: System :: Networking",
    "Topic :: System :: Benchmark",
    "Topic :: Security",
]
dependencies = [
    "requests>=2.28.0",
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
reports = [
    "matplotlib>=3.7.0",
    "jinja2>=3.1.0",
]

[project.scripts]
network-stresser = "loadtest:main"

[project.urls]
Homepage = "https://github.com/example/network-stresser"
Documentation = "https://github.com/example/network-stresser#readme"
Repository = "https://github.com/example/network-stresser"

[tool.setuptools.packages.find]
where = ["."]
include = ["loadtest*"]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
